# ros_ws

./: .gitignore  README.md  frames_2026-06-24_15.07.23.gv
src/: README.md
src/my_robot/: package.xml  setup.py
src/my_robot/my_robot/: obstacle_avoidance.py  square_driver.py  target_reactor.py
src/my_robot/worlds/: my_world.sdf
src/my_robot_description/: README.md  package.xml  setup.py
src/my_robot_description/config/: twist_mux.yaml
src/my_robot_description/launch/: slam.launch.py  spawn_robot.launch.py
src/my_robot_description/map/: my_world_map.pgm  my_world_map.yaml  my_world_v2.pgm  my_world_v2.yaml
src/my_robot_description/maps/: my_world_v2.pgm
src/my_robot_description/urdf/: my_robot.urdf
src/ros2_fundamentals_examples/: CMakeLists.txt  package.xml
src/ros2_fundamentals_examples/ros2_fundamentals_examples/: __init__.py  py_minimal_publisher.py  py_minimal_subscriber.py
src/ros2_fundamentals_examples/ros2_fundamentals_examples/scripts/: minimal_pub_sub_launch.sh
src/system_monitor/: package.xml  setup.py
src/system_monitor/system_monitor/: monitor_node.py
src/vision_node/: README.md  package.xml  setup.py
src/vision_node/vision_node/: face_detector_node.py  sim_camera_detector.py  vision_monitor_node.py  yolo_camera_detector.py
